--- a/hw4/index.html
+++ b/hw4/index.html
@@ -64,6 +64,10 @@
                 <img src="images/p1-only%20shearing.png" align="middle" width="400px"/>
                 <figcaption>with only shearing constraints</figcaption>
             </td>
+        </tr>
+    </table>
+    <table style="width:100%">
+        <tr align="center">
             <td>
                 <img src="images/p1-all%20constraints.png" align="middle" width="400px"/>
                 <figcaption>with all constraints</figcaption>
@@ -163,6 +167,10 @@
                 <img src="images/p3-ks=5000.png" align="middle" width="400px"/>
                 <figcaption>ks=5000 N/m(default)</figcaption>
             </td>
+        </tr>
+    </table>
+    <table style="width:100%">
+        <tr align="center">
             <td>
                 <img src="images/p3-ks=50000.png" align="middle" width="400px"/>
                 <figcaption>ks=50000 N/m</figcaption>
@@ -341,6 +349,11 @@
                 <img src="images/p5-texture-sphere.png" align="middle" width="400px"/>
                 <figcaption align="middle">texture on the sphere</figcaption>
             </td>
+        </tr>
+        <br>
+    </table>
+    <table style="width:100%">
+        <tr align="center">
             <td>
                 <img src="images/p5-texture-cloth.png" align="middle" width="400px"/>
                 <figcaption align="middle">texture on the cloth</figcaption>
